<resources>
    <string name="app_name">Code Base</string>
    <string name="welcome_text">Hello World</string>
    <string name="button_view_binding">View Binding Test</string>
    <string name="button_view_binding_working">View Binding test working</string>
    <string name="button_open_activity">Open Activity</string>
    <string name="worked">It works!</string>
    <string name="button_activity_params">Open</string>
    <string name="edit_text_username_hint">Name</string>
    <string name="username_empty">Please fill your name</string>
    <string name="username_greetings">Hello, %1$s! you opened this Activity with parameters</string>
    <string name="username_message_empty">Activity with no parameters</string>
    <string name="car_greetings">You have a %2$s %3$s, called %1$s</string>
    <string name="button_activity_object">Open Activity with object</string>
    <string name="sum">Sum</string>
    <string name="button_return_result">Return Result</string>
    <string name="no_values_message">Please inform values</string>
    <string name="sum_result">Sum result %1$s</string>
    <string name="button_increment">Increment state</string>
    <string name="button_browser">Browser</string>
    <string name="button_share">Share</string>
    <string name="button_alarm">Alarm</string>
    <string name="implicit_intent_browser">Choose the browser</string>
    <string name="implicit_intent_browser_option_not_found">No browser found</string>
    <string name="implicit_intent_share">Text content to share</string>
    <string name="implicit_intent_share_option">Share text using</string>
    <string name="implicit_intent_share_option_not_found">No options to share</string>
    <string name="implicit_intent_alarm">Alarm message</string>
    <string name="implicit_intent_alarm_option_not_found">No alarm options found</string>
    <string name="button_listview" translatable="false">Listview</string>
    <string name="button_remove">Remove</string>
    <string name="button_insert">Insert</string>
    <string name="button_recyclerview" translatable="false">Recyclerview</string>
</resources>